# cpp

./: .gitignore
Build Tools/CMake/Control Flow/: CMakeLists.txt
Build Tools/CMake/Fucctions & Macros/: CMakeLists.txt
Build Tools/CMake/Hello World/: CMakeCache.txt  CMakeLists.txt  Hello  Hello.cpp  Makefile  cmake_install.cmake
Build Tools/CMake/Loop/: CMakeLists.txt
Build Tools/CMake/Multiple Files/: CMakeLists.txt
Build Tools/CMake/Multiple Files/include/: Foo.h
Build Tools/CMake/Multiple Files/src/: Hello.cpp  foo.cpp
Build Tools/CMake/Subdirectories/: CMakeLists.txt
Build Tools/MSBuild/: 1. HelloWorld.csproj  2. HelloWorld.csproj  3. Parameters.csproj  4. Control.csproj  5. Items.csproj  6.Metadata.csproj  9.Targets.csproj
C++20/Concept/: Concepts.cpp  Own_Concepts.cpp
C++20/Format/: format.cpp
STL/Algorithm/: accumulate.cpp
STL/Algorithm/Modifying sequence operations/: fill.cpp  fill_n.cpp
STL/Iterators/: back_inserter.cpp  front_inserter.cpp  insert_iterator.cpp
STL/WorkSpace/: Functional.cpp  Main.cpp  WorkSpace.sln  WorkSpace.vcxproj  WorkSpace.vcxproj.filters  bind.cpp  fill.cpp  for_each.cpp  stream_iterator.cpp  transform.cpp
